# advent-of-code

./: Cargo.toml  book.toml  out.json
aoc_2022/: Cargo.toml  README.md  day_2.json
src/: README.md  SUMMARY.md
src/2022/: README.md  day_1_calorie_counting.md  day_2_rock_paper_scissors.md
