[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
rayon = "1.6.1"
regex = "1.7.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
take-until = "0.1.0"

[[bin]]
name = "day_1_calorie_counting"
test = true
bench = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
